--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
@@ -39,4 +39,20 @@
 
 .read-the-docs {
   color: #888;
+}
+
+.card-selected {
+  background-color: darkgreen;
+}
+
+.card-unselected {
+  background-color: darkred;
+}
+
+.text-selected {
+  color: #ffffff;
+}
+
+.text-unselected {
+  color: #ffffff;
 }
